--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -14,5 +14,7 @@
     </div>
   <% end %>
 </div>
-<div id="results">
-</div>
+<div id="results"></div>
+<% if !@tracked_stocks.empty? %>
+  <%= render 'stocks/list' %>
+<% end %>
