--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-9">
+  <div class="col-9">  
     <table class="table table-bordered table-hover">
       <thead>
         <tr>
@@ -10,14 +10,14 @@
         </tr>
       </thead>
       <tbody>
-        <% @tracked_stocks.each do|stock| %>
+        <% @tracked_stocks.each do |stock| %>
           <tr>
             <th scope="row"><%= stock.ticker %></th>
             <td><%= stock.name %></td>
             <td><%= stock.last_price %></td>
-            <td><%= 'Action Placeholder' %></td>
+            <td><%= 'Action placeholder' %></td>
           </tr>
-        <% end %>  
+        <% end %>
       </tbody>
     </table>
   </div>
