--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -9,13 +9,13 @@
           <tr>
             <td><strong>Name: </strong> <%= friend.full_name %></td>
             <td><strong>Email: </strong> <%= friend.email %></td>
-            <td><strong>Actions: </strong> <%= link_to "View Profile", '#',
+            <td><strong>Actions: </strong> <%= link_to "View Profile", user_path(friend),
                                       class:"btn btn-sm btn-info"  %>
                 <% if current_user.not_friends_with(friend.id) %>                        
                   <%= link_to 'Follow friend?', friendships_path(friend: friend),
                                       class: "btn btn-sm btn-success", method: :post %></td>
                 <% else %>
-                  <span class="badge badge-secodary">
+                  <span class="badge badge-secondary">
                     You are already friends
                   </span>
                 <% end %>                          
